[gd_scene load_steps=13 format=3 uid="uid://c6u57obpde3dn"]

[ext_resource type="Script" path="res://UI/Resources_Panel.gd" id="1_iodte"]
[ext_resource type="Texture2D" uid="uid://g0d811r18s3o" path="res://Assets/ui/icons/80px/h2o3_80px.png" id="2_211jq"]
[ext_resource type="Texture2D" uid="uid://dfwton4bkr556" path="res://Assets/ui/icons/arrow_stable.svg" id="2_m66a7"]
[ext_resource type="Texture2D" uid="uid://xthvnnerghmo" path="res://Assets/ui/icons/80px/energy_80px.png" id="3_2r40o"]
[ext_resource type="Texture2D" uid="uid://ba0usv4hs5ep5" path="res://Assets/ui/icons/80px/h2o1_80px.png" id="3_jbcer"]
[ext_resource type="Texture2D" uid="uid://cwwyvmb6b4xin" path="res://Assets/ui/icons/arrow_up_green.svg" id="4_7b417"]
[ext_resource type="Texture2D" uid="uid://bovjj38lhub4" path="res://Assets/ui/icons/arrow_down_red.svg" id="4_iq8u6"]
[ext_resource type="Texture2D" uid="uid://b5dg55jj78uk2" path="res://Assets/ui/icons/80px/minerals3_80px.png" id="4_ti42c"]
[ext_resource type="Texture2D" uid="uid://d2q0sygsh6pqg" path="res://Assets/ui/icons/80px/carbon1_80px.png" id="5_jlycr"]
[ext_resource type="Texture2D" uid="uid://bbx3nbwcklqal" path="res://Assets/ui/icons/enzyme_pink_120px.png" id="7_pvsa7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axc87"]
bg_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ur400"]
bg_color = Color(0.385493, 0.385493, 0.385492, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ResourcesPanel" type="PanelContainer"]
custom_minimum_size = Vector2(800, 0)
offset_right = 800.0
offset_bottom = 62.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_axc87")
script = ExtResource("1_iodte")
trend_icon_textures = Array[Texture2D]([ExtResource("2_m66a7"), ExtResource("4_7b417"), ExtResource("4_iq8u6")])

[node name="TopMenuBackground3" type="ColorRect" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 2
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Limit" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 6

[node name="Legend" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
layout_mode = 2
size_flags_horizontal = 10

[node name="storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Legend"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mycelium Capacity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="water_storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Water"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "19990"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Limit/Water"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="water_storage_ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Limit/Water/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ur400")
show_percentage = false

[node name="Energy" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="energy_storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Energy"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Limit/Energy"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="energy_storage_ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Limit/Energy/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ur400")
show_percentage = false

[node name="Minerals" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="minerals_storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Minerals"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Limit/Minerals"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="minerals_storage_ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Limit/Minerals/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ur400")
show_percentage = false

[node name="Carbon" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="carbon_storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Carbon"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Limit/Carbon"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="carbon_storage_ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Limit/Carbon/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ur400")
show_percentage = false

[node name="Enzymes" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Limit"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="enzymes_storage_label" type="Label" parent="MarginContainer/VBoxContainer/Limit/Enzymes"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Limit/Enzymes"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="enzymes_storage_ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Limit/Enzymes/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ur400")
show_percentage = false

[node name="Values" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 6

[node name="Legend" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
layout_mode = 2
size_flags_horizontal = 10

[node name="value_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Legend"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Amount"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
layout_mode = 2
size_flags_horizontal = 3

[node name="h2o_show" type="TextureButton" parent="MarginContainer/VBoxContainer/Values/Water"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Water"
texture_normal = ExtResource("2_211jq")
texture_pressed = ExtResource("3_jbcer")
ignore_texture_size = true
stretch_mode = 5

[node name="h2o_trend" type="TextureRect" parent="MarginContainer/VBoxContainer/Values/Water"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(24, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_7b417")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Values/Water"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="h2o_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Water/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0023.23"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Energy" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
layout_mode = 2
size_flags_horizontal = 3

[node name="energy_show" type="TextureButton" parent="MarginContainer/VBoxContainer/Values/Energy"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Energy"
texture_normal = ExtResource("3_2r40o")
ignore_texture_size = true
stretch_mode = 5

[node name="energy_trend" type="TextureRect" parent="MarginContainer/VBoxContainer/Values/Energy"]
unique_name_in_owner = true
auto_translate_mode = 1
texture_filter = 2
custom_minimum_size = Vector2(24, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_7b417")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Values/Energy"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="energy_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Energy/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1666.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minerals" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
layout_mode = 2
size_flags_horizontal = 3

[node name="minerals_show" type="TextureButton" parent="MarginContainer/VBoxContainer/Values/Minerals"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Minerals"
texture_normal = ExtResource("4_ti42c")
ignore_texture_size = true
stretch_mode = 5

[node name="minerals_trend" type="TextureRect" parent="MarginContainer/VBoxContainer/Values/Minerals"]
unique_name_in_owner = true
auto_translate_mode = 1
texture_filter = 2
custom_minimum_size = Vector2(24, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_7b417")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Values/Minerals"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="minerals_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Minerals/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1666.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Carbon" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
layout_mode = 2
size_flags_horizontal = 3

[node name="carbon_show" type="TextureButton" parent="MarginContainer/VBoxContainer/Values/Carbon"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Carbon"
texture_normal = ExtResource("5_jlycr")
ignore_texture_size = true
stretch_mode = 5

[node name="carbon_trend" type="TextureRect" parent="MarginContainer/VBoxContainer/Values/Carbon"]
unique_name_in_owner = true
auto_translate_mode = 1
texture_filter = 2
custom_minimum_size = Vector2(24, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_7b417")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Values/Carbon"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="carbon_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Carbon/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "1666.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enzymes" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Values"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="enzymes_show" type="TextureButton" parent="MarginContainer/VBoxContainer/Values/Enzymes"]
auto_translate_mode = 1
modulate = Color(0.94743, 0.533437, 0.959029, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Enzymes"
texture_normal = ExtResource("7_pvsa7")
ignore_texture_size = true
stretch_mode = 5

[node name="enzymes_trend" type="TextureRect" parent="MarginContainer/VBoxContainer/Values/Enzymes"]
unique_name_in_owner = true
auto_translate_mode = 1
texture_filter = 2
custom_minimum_size = Vector2(24, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_7b417")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Values/Enzymes"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8

[node name="enzymes_label" type="Label" parent="MarginContainer/VBoxContainer/Values/Enzymes/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"ResourceLabelLevelTopMenu"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
